--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "peersea.js",
   "scripts": {
-    "prettier": "prettier --write peersea.js",
+    "prettier": "prettier --write peersea.js --print-width 72",
     "readme": "cat peersea.js | sed -e 's/^/    /' | sed -e 's/^ *[/][/] \\?//' > README.md",
     "dev": "./dev.sh"
   },
