--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "readme": "cat p2pweb.js | sed -e 's/^/    /' | sed -e 's/^ *[/][/] \\?//' > README.md",
     "dev": "./dev.sh"
   },
+  "pre-commit": [
+    "prettier"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rasmuserik/p2pweb.git"
@@ -23,6 +26,7 @@
   },
   "devDependencies": {
     "live-server": "^1.2.0",
+    "pre-commit": "^1.2.2",
     "prettier": "^1.6.1"
   }
 }
