add readme-generation to pre-commit

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "./dev.sh"
   },
   "pre-commit": [
-    "prettier"
+    "prettier",
+    "readme"
   ],
   "repository": {
     "type": "git",
