--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: node_js
+node_js:
+    - iojs
+after_success:
+  - 'npm run coveralls'
 deploy:
   provider: npm
   email: npmjs@solsort.com
