docs + build-scripts

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "p2pweb",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
   "main": "p2pweb.js",
   "scripts": {
     "prettier": "prettier --write p2pweb.js --print-width 72 && git add p2pweb.js",
     "dev": "./dev.sh",
-    "docs/code": "documentation build p2pweb.js -f html -o docs/code; git add docs/code",
+    "docs/jsdoc": "documentation build p2pweb.js -f html -o docs/jsdoc; git add docs/jsdoc",
     "pandoc-readme": "pandoc pandoc/README.yml pandoc/template.yml README.md --template=pandoc/template.html -s -o docs/index.html",
     "test": "P2PWEB_URL=ws://localhost:3535 RUN_TESTS=true istanbul cover p2pweb.js",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
@@ -16,7 +16,7 @@
     "prettier",
     "test",
     "pandoc-readme",
-    "docs/code"
+    "docs/jsdoc"
   ],
   "repository": {
     "type": "git",
