roadmap notes + add conference + add literature

--- a/pandoc/notes.yml
+++ b/pandoc/notes.yml
@@ -3,5 +3,5 @@ title: Notes (in progress) about P2P Web
 author: Rasmus Erik Voel Jensen
 date: 2017
 abstract: |
-  Random ramblings and notes during the P2P Web.
+  Random ramblings and notes during the development of P2P Web.
 ---
