--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/p2pweb.js",
   "scripts": {
-    "dev": "./dev.sh",
+    "dev": "webpack-dev-server --content-base dist/",
     "build": "make",
     "docs": "make docs; git add docs",
     "test": "make ./coverage/lcov.info",
@@ -33,8 +33,10 @@
     "coveralls": "^2.13.1",
     "documentation": "^5.3.1",
     "istanbul": "^1.1.0-alpha.1",
-    "live-server": "^1.2.0",
     "pre-commit": "^1.2.2",
-    "prettier": "^1.6.1"
+    "prettier": "^1.6.1",
+    "uglify-es": "github:mishoo/UglifyJS2#harmony",
+    "webpack": "^3.5.6",
+    "webpack-dev-server": "^2.7.1"
   }
 }
