--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "coveralls": "^2.13.1",
     "documentation": "^5.3.1",
+    "live-server": "^1.2.0",
     "mocha": "^3.5.3",
     "nyc": "^11.2.1",
     "pre-commit": "^1.2.2",
