--- a/package.json
+++ b/package.json
@@ -34,6 +34,12 @@
   "devDependencies": {
     "coveralls": "^2.13.1",
     "documentation": "^5.3.1",
+    "eslint": "^4.7.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "live-server": "^1.2.0",
     "mocha": "^3.5.3",
     "nyc": "^11.2.1",
@@ -42,5 +48,8 @@
     "uglify-es": "github:mishoo/UglifyJS2#harmony",
     "webpack": "^3.5.6",
     "webpack-dev-server": "^2.7.1"
+  },
+  "jshintConfig": {
+    "esversion": 7
   }
 }
